# LocalKnowledgeAgent

./: .env.example  .gitignore  CLAUDE.md  GAMINI.md  README.md  app.py  check_section_7_1_completion.py  create_index_manual.py  manual_collection_reset.py  pyproject.toml  requirements.txt  test_cfg_007_fix.py  test_cfg_011_fix.py  test_chroma_index_check.py  test_distance_debug.py  test_document_fix.py  test_embedding_fix.py  test_issue_009.py  test_ollama_connection.py  test_settings_index_creation.py  test_startup_model_check.py  test_streamlit_fix.py
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: architecture_structure.md  development_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.streamlit/: config.toml  config_debug.toml
data/: config.json
data/chroma_db/: chroma.sqlite3
debug_chroma_test/: chroma.sqlite3
docs/: INSTALL.md  USER_MANUAL.md  design-specification.md  design-specification.md   design.md  project-plan.md
rag/: 出張規定.txt  学校規定.md  道路交通法.docx
src/exceptions/: __init__.py  base_exceptions.py
src/interfaces/: __init__.py  config_interface.py  indexing_interface.py  qa_interface.py
src/logic/: config_manager.py  indexing.py  ollama_checker.py  ollama_model_service.py  qa.py
src/models/: __init__.py  chat_history.py  config.py  document.py
src/security/: __init__.py  file_validator.py  xss_protection.py
src/ui/: main_view.py  navigation.py  settings_view.py
tests/: __init__.py  conftest.py  test_app.py  test_app_simple.py  test_ollama_model_service.py
(+37 files in other folders)
